More typos, added mcp3004/mcp3008

--- a/wiringPi/Makefile
+++ b/wiringPi/Makefile
@@ -51,7 +51,7 @@ SRC	=	wiringPi.c						\
 		mcp23s08.c mcp23s17.c					\
 		sr595.c							\
 		pcf8574.c pcf8591.c					\
-		mcp3002.c mcp4802.c mcp3422.c				\
+		mcp3002.c mcp3004.c mcp4802.c mcp3422.c			\
 		drc.c
 
 OBJ	=	$(SRC:.c=.o)
@@ -102,6 +102,7 @@ install-headers:
 	@install -m 0644 mcp23s08.h		$(DESTDIR)$(PREFIX)/include
 	@install -m 0644 mcp23s17.h		$(DESTDIR)$(PREFIX)/include
 	@install -m 0644 mcp3002.h		$(DESTDIR)$(PREFIX)/include
+	@install -m 0644 mcp3004.h		$(DESTDIR)$(PREFIX)/include
 	@install -m 0644 mcp4802.h		$(DESTDIR)$(PREFIX)/include
 	@install -m 0644 mcp3422.h		$(DESTDIR)$(PREFIX)/include
 	@install -m 0644 sr595.h		$(DESTDIR)$(PREFIX)/include
@@ -138,6 +139,7 @@ uninstall:
 	@rm -f $(DESTDIR)$(PREFIX)/include/mcp23s08.h
 	@rm -f $(DESTDIR)$(PREFIX)/include/mcp23s17.h
 	@rm -f $(DESTDIR)$(PREFIX)/include/mcp3002.h
+	@rm -f $(DESTDIR)$(PREFIX)/include/mcp3004.h
 	@rm -f $(DESTDIR)$(PREFIX)/include/mcp4802.h
 	@rm -f $(DESTDIR)$(PREFIX)/include/mcp3422.h
 	@rm -f $(DESTDIR)$(PREFIX)/include/sr595.h
