Added in the PiGlow devLib extension driver. Written some examples for the PiGlow board bumped wiringPi version

--- a/build
+++ b/build
@@ -27,6 +27,8 @@ if [ x$1 = "xclean" ]; then
   echo -n "PiFace:     "	; make clean
   cd ../q2w
   echo -n "Quick2Wire: "	; make clean
+  cd ../PiGlow
+  echo -n "PiGlow:     "	; make clean
   exit
 fi
 
