--- a/build
+++ b/build
@@ -51,18 +51,30 @@ fi
   echo "WiringPi Library"
   cd wiringPi
   sudo make uninstall
-  make
-  check_make_ok
-  sudo make install
+  if [ x$1 = "xstatic" ]; then
+    make static
+    check_make_ok
+    sudo make install-static
+  else
+    make
+    check_make_ok
+    sudo make install
+  fi
   check_make_ok
 
   echo
   echo "WiringPi Devices Library"
   cd ../devLib
   sudo make uninstall
-  make
-  check_make_ok
-  sudo make install
+  if [ x$1 = "xstatic" ]; then
+    make static
+    check_make_ok
+    sudo make install-static
+  else
+    make
+    check_make_ok
+    sudo make install
+  fi
   check_make_ok
 
   echo
