ignoring more generated files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
 *.a
 *.o
+
+gpio/gpio
+wiringPi/libwiringPi.so.1.0
+
+examples/blink
+examples/delayTest
+examples/gertboard
+examples/isr
+examples/isr-osc
+examples/lcd
+examples/nes
+examples/okLed
+examples/piface
+examples/pwm
+examples/serialRead
+examples/serialTest
+examples/servo
+examples/speed
+examples/test1
+examples/test2
+examples/tone
+examples/wfi
+
