--- a/devLib/Makefile
+++ b/devLib/Makefile
@@ -1,7 +1,8 @@
+#
 # Makefile:
 #	wiringPi device - Wiring Compatable library for the Raspberry Pi
 #
-#	Copyright (c) 2012-2013 Gordon Henderson
+#	Copyright (c) 2012-2015 Gordon Henderson
 #################################################################################
 # This file is part of wiringPi:
 #	https://projects.drogon.net/raspberry-pi/wiringpi/
@@ -20,10 +21,7 @@
 #    along with wiringPi.  If not, see <http://www.gnu.org/licenses/>.
 #################################################################################
 
-DYN_VERS_MAJ=2
-DYN_VERS_MIN=0
-
-VERSION=$(DYN_VERS_MAJ).$(DYN_VERS_MIN)
+VERSION=$(shell cat ../VERSION)
 DESTDIR=/usr
 PREFIX=/local
 
@@ -34,7 +32,8 @@ DYNAMIC=libwiringPiDev.so.$(VERSION)
 DEBUG	= -O2
 CC	= gcc
 INCLUDE	= -I.
-CFLAGS	= $(DEBUG) -Wformat=2 -Wall $(INCLUDE) -Winline -pipe -fPIC
+DEFS	= -D_GNU_SOURCE
+CFLAGS	= $(DEBUG) $(DEFS) -Wformat=2 -Wall -Winline $(INCLUDE) -pipe -fPIC
 
 LIBS    =
 
@@ -46,6 +45,8 @@ SRC	=	ds1302.c maxdetect.c  piNes.c		\
 		piGlow.c
 
 OBJ	=	$(SRC:.c=.o)
+
+HEADERS	=	ds1302.h gertboard.h  lcd128x64.h  lcd.h  maxdetect.h piFace.h  piGlow.h  piNes.h
 
 all:		$(DYNAMIC)
 
@@ -76,21 +77,11 @@ tags:	$(SRC)
 	@ctags $(SRC)
 
 
-.PHONY:	install-headers
-install-headers:
-	@echo "[Install Headers]"
-	@install -m 0755 -d			$(DESTDIR)$(PREFIX)/include
-	@install -m 0644 ds1302.h		$(DESTDIR)$(PREFIX)/include
-	@install -m 0644 maxdetect.h		$(DESTDIR)$(PREFIX)/include
-	@install -m 0644 piNes.h		$(DESTDIR)$(PREFIX)/include
-	@install -m 0644 gertboard.h		$(DESTDIR)$(PREFIX)/include
-	@install -m 0644 piFace.h		$(DESTDIR)$(PREFIX)/include
-	@install -m 0644 lcd128x64.h		$(DESTDIR)$(PREFIX)/include
-	@install -m 0644 lcd.h			$(DESTDIR)$(PREFIX)/include
-	@install -m 0644 piGlow.h		$(DESTDIR)$(PREFIX)/include
-
 .PHONY:	install
-install:	$(DYNAMIC) install-headers
+install:	$(DYNAMIC)
+	@echo "[Install Headers]"
+	@install -m 0755 -d						$(DESTDIR)$(PREFIX)/include
+	@install -m 0644 $(HEADERS)					$(DESTDIR)$(PREFIX)/include
 	@echo "[Install Dynamic Lib]"
 	@install -m 0755 -d						$(DESTDIR)$(PREFIX)/lib
 	@install -m 0755 libwiringPiDev.so.$(VERSION)			$(DESTDIR)$(PREFIX)/lib/libwiringPiDev.so.$(VERSION)
@@ -98,23 +89,29 @@ install:	$(DYNAMIC) install-headers
 	@ldconfig
 
 .PHONY:	install-static
-install-static:	$(STATIC) install-headers
+install-static:	$(STATIC)
+	@echo "[Install Headers]"
+	@install -m 0755 -d						$(DESTDIR)$(PREFIX)/include
+	@install -m 0644 $(HEADERS)					$(DESTDIR)$(PREFIX)/include
 	@echo "[Install Static Lib]"
-	@install -m 0755 -d			$(DESTDIR)$(PREFIX)/lib
-	@install -m 0755 libwiringPiDev.a	$(DESTDIR)$(PREFIX)/lib
+	@install -m 0755 -d						$(DESTDIR)$(PREFIX)/lib
+	@install -m 0755 libwiringPiDev.a				$(DESTDIR)$(PREFIX)/lib
+
+.PHONY:	install-deb
+install-deb:	$(DYNAMIC)
+	@echo "[Install Headers: deb]"
+	@install -m 0755 -d							~/wiringPi/debian/wiringPi/usr/include
+	@install -m 0644 $(HEADERS)						~/wiringPi/debian/wiringPi/usr/include
+	@echo "[Install Dynamic Lib: deb]"
+	install -m 0755 -d							~/wiringPi/debian/wiringPi/usr/lib
+	install -m 0755 libwiringPiDev.so.$(VERSION)				~/wiringPi/debian/wiringPi/usr/lib/libwiringPiDev.so.$(VERSION)
+	ln -sf ~/wiringPi/debian/wiringPi/usr/lib/libwiringPi.so.$(VERSION)	~/wiringPi/debian/wiringPi/usr/lib/libwiringPiDev.so
 
 .PHONY:	uninstall
 uninstall:
 	@echo "[UnInstall]"
-	@rm -f $(DESTDIR)$(PREFIX)/include/ds1302.h
-	@rm -f $(DESTDIR)$(PREFIX)/include/maxdetect.h
-	@rm -f $(DESTDIR)$(PREFIX)/include/piNes.h
-	@rm -f $(DESTDIR)$(PREFIX)/include/gertboard.h
-	@rm -f $(DESTDIR)$(PREFIX)/include/piFace.h
-	@rm -f $(DESTDIR)$(PREFIX)/include/lcd128x64.h
-	@rm -f $(DESTDIR)$(PREFIX)/include/lcd.h
-	@rm -f $(DESTDIR)$(PREFIX)/include/piGlow.h
-	@rm -f $(DESTDIR)$(PREFIX)/lib/libwiringPiDev.*
+	@cd $(DESTDIR)$(PREFIX)/include/ && rm -f $(HEADERS)
+	@cd $(DESTDIR)$(PREFIX)/lib/     && rm -f libwiringPiDev.*
 	@ldconfig
 
 
