--- a/examples/Makefile
+++ b/examples/Makefile
@@ -45,7 +45,7 @@ SRC	=	blink.c blink8.c blink12.c					\
 		lcd.c lcd-adafruit.c clock.c					\
 		nes.c								\
 		softPwm.c softTone.c 						\
-		delayTest.c serialRead.c serialTestc okLed.c ds1302.c		\
+		delayTest.c serialRead.c serialTest.c okLed.c ds1302.c		\
 		lowPower.c							\
 		max31855.c							\
 		rht03.c
