Many changes - tidying up the extensions interfaces. Updating the GPIO command - new command - allreadall ScrollPhat code max31855 code (tested with adafruit breakout board) more tests updated rht03 code
Raspberry Pi v3 support.

--- a/build
+++ b/build
@@ -62,6 +62,8 @@ if [ x$1 = "xclean" ]; then
   echo -n "Quick2Wire: "	; make clean
   cd ../PiGlow
   echo -n "PiGlow:     "	; make clean
+  cd ../scrollPhat
+  echo -n "scrollPhat: "	; make clean
   exit
 fi
 
