devLib/CMakeLists.txt update for lastest change [part 2]

--- a/devLib/CMakeLists.txt
+++ b/devLib/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(devLib_src ds1302.c maxdetect.c  piNes.c gertboard.c piFace.c lcd128x64.c lcd.c piGlow.c)
+set(devLib_src ds1302.c maxdetect.c scrollPhat.c piNes.c gertboard.c piFace.c lcd128x64.c lcd.c piGlow.c)
 set(LIB_INSTALL_PATH /usr/lib)
 add_library(libwiringPiDev  SHARED ${devLib_src})
 set(LIBRARY_OUTPUT_PATH {LIB_INSTALL_PATH)
