--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ lib*.so.*
 debian-template/wiringPi
 debian-template/wiringpi-*.deb
 gpio/gpio
+CMakeCache.txt
+CMakeFiles/
+Makefile
+cmake_install.cmake
