build: Create DESTDIR subdirectories before installing
Change-Id: I4157f26ad9c828da6f552a360fdce1f7d030d4f3
Origin: https://github.com/tizenteam/WiringPi
Signed-off-by: Philippe Coval <philippe.coval@osg.samsung.com>

--- a/wiringPi/Makefile
+++ b/wiringPi/Makefile
@@ -140,6 +140,7 @@ install-deb:	$(DYNAMIC)
 .PHONY:	uninstall
 uninstall:
 	$Q echo "[UnInstall]"
+	$Q install -d $(DESTDIR)$(PREFIX)/include/ $(DESTDIR)$(PREFIX)/lib
 	$Q cd $(DESTDIR)$(PREFIX)/include/ && rm -f $(HEADERS)
 	$Q cd $(DESTDIR)$(PREFIX)/lib/     && rm -f libwiringPi.*
 	$Q $(LDCONFIG)
