--- a/wiringPi/Makefile
+++ b/wiringPi/Makefile
@@ -57,8 +57,8 @@ SRC	=	wiringPi.c						\
 		mcp3002.c mcp3004.c mcp4802.c mcp3422.c			\
 		max31855.c max5322.c ads1115.c				\
 		sn3218.c						\
-		bmp180.c htu21d.c ds18b20.c				\
-		drcSerial.c						\
+		bmp180.c htu21d.c ds18b20.c rht03.c			\
+		drcSerial.c drcNet.c					\
 		pseudoPins.c						\
 		wpiExtensions.c
 
