Added a fix to include -lcrypt for people who can't do it themselves. Added gpio readall support for the Pi 0W.

--- a/build
+++ b/build
@@ -160,13 +160,13 @@ fi
   $sudo make install
   check_make_ok
 
-  echo
-  echo "wiringPi Daemon"
-  cd ../wiringPiD
-  make -j5
-  check_make_ok
-  $sudo make install
-  check_make_ok
+# echo
+# echo "wiringPi Daemon"
+# cd ../wiringPiD
+# make -j5
+# check_make_ok
+# $sudo make install
+# check_make_ok
 
 # echo
 # echo "Examples"
