create dynamic link without version

--- a/wiringPi/Makefile
+++ b/wiringPi/Makefile
@@ -32,7 +32,7 @@ Q ?= @
 endif
 
 STATIC=libwiringPi.a
-DYNAMIC=$(LIB_PATH)libwiringPi.so.$(VERSION)
+DYNAMIC=$(LIB_PATH)libwiringPi.so
 
 #DEBUG	= -g -O0
 DEBUG	= -O2
@@ -78,7 +78,7 @@ $(STATIC):	$(OBJ)
 
 $(DYNAMIC):	$(OBJ)
 	$Q echo "[Link (Dynamic)]"
-	$Q $(CC) -shared -Wl,-soname,libwiringPi.so$(WIRINGPI_SONAME_SUFFIX) -o $@ $(LIBS) $(OBJ)
+	$Q $(CC) -shared -Wl,-soname,libwiringPi.so -o $@ $(LIBS) $(OBJ)
 
 .c.o:
 	$Q echo [Compile] $<
